src/Chapter4/chapter_4_4/Resources/VecMath.g4
grammar VecMath;
statlist :stat+;
stat: ID '=' expr
      |'print' expr
      ;

expr: multExpr ('+' multExpr)*;

multExpr: primary (('*'|'.') primary)*;

primary: INT | ID | '[' expr (','expr)* ']';

WS:(' '|'\t'|'\r'|'\n'){skip();};
INT : '0'..'9';
ID :('a'..'z'|'A'..'Z')+;
